common/media.css
/* large screen to extra large: from 992px to 1200px */
@media only screen and (max-width: 1200px) {

  /* *************** */
  /* common use */
  /* *************** */

  h1 {
    font-size: 4em;
  }

  h3 {
    font-size: 1.7em;
  }
}

/* Medium tablets to large screen: from 768px to 991px */
@media only screen and (max-width: 991px) {

  /* *************** */
  /* common use */
  /* *************** */

  h1 {
    font-size: 3em;
  }

  h3 {
    font-size: 1.5em;
  }

  .middle-center {
    padding: 5em 0;
  }

  .fs {
    font-size: .7rem;
  }

  /* *************** */
  /* header */
  /* *************** */

  .g-nav .dz-logo {
    width: 150px;
    height: 30px;
  }

  .g-nav li a {
    font-size: 1.3em;
  }
  
  /* *************** */
  /* main body */
  /* *************** */

  .g-body .bike-block{
    padding: 2em 5em;
  }
}
/* Small phones to small tablets: from 576px to 767px */
@media only screen and (max-width: 767px) {
  
  /* *************** */
  /* common use */
  /* *************** */

  .middle-center {
    padding: 2.5em 0;
  }

  /* *************** */
  /* main body */
  /* *************** */
  .g-body .bike-block{
    margin: .5em auto;
    padding: 2em 2em;
  }
}

/* Small phones: from 421px to 575px */
@media only screen and (max-width: 575px) {

  /* *************** */
  /* common use */
  /* *************** */

  h1 {
    font-size: 3.1em;
  }

  h3 {
    font-size: 1.15em;
  }

  .middle-center {
    padding: 2em 1em;
  }

  .fs {
    font-size: 0.65rem;
  }

  /* *************** */
  /* header */
  /* *************** */

  .g-nav {
    margin-top: 0;
  }

  .g-nav .dz-logo {
    width: 125px;
    height: 25px;
    z-index: 2;
  }

  /* mobile menu icon */
  .g-nav .nav-toggle {
    position: absolute;
    width: 1.6rem;
    height: 1.6rem;
    right: .8rem;
    margin-top: .2rem;
    z-index: 2;
  }

  .g-nav .nav-toggle i,
  .g-nav .nav-toggle i::before,
  .g-nav .nav-toggle i::after {
    position: absolute;
    width: 1rem;
    height: .15rem;
    background-color: #fff;
    transition: .3s;
  }
  
  .g-nav .nav-toggle i {
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }

  .g-nav .nav-toggle i::before {
    content: '';
    top: -.3rem;
  }

  .g-nav .nav-toggle i::after {
    content: '';
    top: .3rem;
  }

  /* mobile menu list */
  .g-nav .nav-list {
    position: fixed;
    display: flex;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
    height: 100%;
    font-size: .9rem;
    z-index: 1;
    opacity: 0;
    justify-content: center;
    align-items: center;
    transition: opacity .3s ease-in-out;
  }

  .g-nav .nav-list ul{
    display: inline-block;
  }

  .g-nav .nav-list li{
    padding: 1rem;
  }

  .g-nav li a{
    margin-right: 0;
  }

  .g-nav .nav-list-visible {
    opacity: 1;
    background-color: #09c6a2;
  }
}

/* Small phones: from 0 to 420px (iPhone 4 to iPhone 6+)*/ 
@media only screen and (max-width: 420px) {
  
  /* *************** */
  /* common use */
  /* *************** */

  h1 {
    font-size: 2.3em;
  }

}

